--- a/style.css
+++ b/style.css
@@ -64,6 +64,24 @@ body, html {
   display: block;
 }
 .carousel {
-  width:640px;
+  width:600px;
   height:360px;
+}
+.toys {
+  float: left;
+}
+.descriptopn {
+  float: right;
+}
+
+.d-list {
+  float: left;
+  margin: auto;
+  padding-left: 25%;
+  padding-right: 25%;
+  padding-top: 5%;
+}
+#Owneres {
+  padding-top: 400px;
+  text-align: center;
 }
