--- a/style.css
+++ b/style.css
@@ -51,17 +51,20 @@ body, html {
 #Owneres {
   text-align: center;
 }
+#tyso {
+
+}
 /* Style the navbar */
 #navbar {
   overflow: hidden;
-  background-color: #333;
+  background-color: #503B3B;
 }
 
 /* Navbar links */
 #navbar a {
   float: left;
   display: block;
-  color: #f2f2f2;
+  color: #FF914D;
   text-align: center;
   padding: 14px;
   text-decoration: none;
@@ -94,4 +97,64 @@ body, html {
 .paragraph {
   margin-left: 20px;
   margin-right: 20px;
+}
+}
+.contentWrapper {
+	width: 750px;
+	padding: 20 20px;
+	margin: 0 auto;
+	position: relative;
+}
+#signUp {
+	margin-top: 10px;
+	padding: 0 20px 15px 20px;
+	border: 3px solid #bbb;
+  border-style: solid;
+}
+#signUp legend {
+	font-size: 2em;
+	font-weight: 200;
+	padding: 0 .2em;
+}
+#signUp label {
+	display: block;
+	padding-top: 1em;
+}
+#signUp label:first-of-type {
+	margin-top: -.9em;
+}
+#nameLabel {
+	margin-top: -1em;
+}
+#submit, #clearCookie {
+	display: block;
+	font-size: 1em;
+	color: #FFF;
+	text-transform: uppercase;
+	background: #A05720;
+	padding: .8em 1em .7em;
+	border: 0;
+	border-bottom: 3px solid #503B3B;
+	margin-top: 15px;
+}
+.textfield {
+	font-family: "Courier New", Courier, monospace;
+	font-size: 14px;
+	padding: 7px;
+	background: #efefef;
+	border: 1px solid #bbb;
+	width: 97%;
+}
+.textfield:focus {
+	background: #FBF8D2;
+}
+h1 {
+  text-align: center;
+}
+fieldset {
+  background-color: #FF914D;
+}
+.form {
+  padding-left: 20%;
+  padding-right: 20%;
 }
