--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body, html {
 /* The hero image */
 .hero-image {
   /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
-  background-image: url("https://i.imgur.com/lakOk7T.png");
+  background-image: url("https://i.imgur.com/wPh5udb.png");
 
   /* Set a specific height */
   height: 93%;
@@ -14,7 +14,7 @@ body, html {
   /* Position and center the image to scale nicely on all screens */
   background-position: center;
   background-repeat: no-repeat;
-  background-size: auto-;
+  background-size: 100%;
   position: center;
 }
 
@@ -157,4 +157,30 @@ fieldset {
 .form {
   padding-left: 20%;
   padding-right: 20%;
+  padding-bottom: 1%;
+}
+.social {
+  border: 1px solid;
+  border-radius: 5px;
+  text-align: center;
+}
+.twitter {
+  background-color: #1DA1F2;
+  border-color: #1DA1F2;
+  color: white;
+}
+.snapchat {
+  background-color: #FFFC00;
+  border-color: #FFFC00;
+  color: black;
+}
+.facebook {
+  background-color: #3B5998;
+  border-color:	#3B5998;
+  color: white;
+}
+.instagram {
+  background-color: white;
+  border-color: white;
+  color: black;
 }
